--- a/.gitmodules
+++ b/.gitmodules
@@ -157,3 +157,6 @@
 [submodule "extension-cpp"]
 	path = extension-cpp
 	url = https://github.com/pytorch/extension-cpp
+[submodule "ext_prj/pytorch-custom-cuda-tutorial"]
+	path = ext_prj/pytorch-custom-cuda-tutorial
+	url = https://github.com/chrischoy/pytorch-custom-cuda-tutorial
